# YoloBliss

./: .gitignore  README.md  enregistrer_video_corrigee.py  pyproject.toml  test_aruco_detection.py  test_yolo_detection.py
app/: app.py  requirements.txt
app/utils/: paths.py  run_sim_episode.py  run_sim_interactive.py  style.py
src/aruco/: detection_avec_repere_aruco.py  detection_avec_repere_aruco_map.py
src/robot/: cross_q.py  detection_module.py  eval_models.py  her.py  her_push_in_hole.py  her_sorting.py  main.py  ppo_algo.py  real_perception.py  sac_algo.py  sim_3dofs.py  sim_from_real.py  sim_to_real.py  td3_algo.py  test_env.py  test_mirror.py
src/robot/logs/her_sac/: evaluations.npz
src/robot/logs/her_sac/SAC_21/: events.out.tfevents.1774360546.msiCrosshair.360229.0
src/robot/logs/her_sac/SAC_22/: events.out.tfevents.1774363749.msiCrosshair.410535.0
src/robot/logs/her_sac/SAC_23/: events.out.tfevents.1774367964.msiCrosshair.462622.0
src/robot/logs/her_sac/SAC_24/: events.out.tfevents.1774368249.msiCrosshair.466897.0
src/robot/logs/her_sac/SAC_25/: events.out.tfevents.1774368322.msiCrosshair.468218.0
src/robot/logs/her_sac/SAC_26/: events.out.tfevents.1774382894.msiCrosshair.22344.0
src/robot/logs/her_sac/SAC_27/: events.out.tfevents.1774383103.msiCrosshair.25594.0
src/robot/logs/ppo/: evaluations.npz
src/robot/logs/sac/: evaluations.npz
src/robot/logs/sac_reaching/: evaluations.npz
src/robot/logs/td3/: evaluations.npz
src/robot/robot_env/: push_env.py  push_in_hole_env.py  reaching_env.py  robot.xml  sliding_env.py  sorting_env.py
(+41 files in other folders)
