[project]
name = "robotic-arm-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynamixel-sdk>=4.0.3",
    "gymnasium>=1.2.3",
    "mujoco>=3.6.0",
    "numpy>=2.3.5",
    "onshape-to-robot>=1.8.1",
    "opencv-python>=4.13.0.92",
    "placo>=0.9.20",
    "pyrealsense2>=2.56.5.9235",
    "pyserial>=3.5",
    "sb3-contrib>=2.7.1",
    "stable-baselines3>=2.7.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "ultralytics>=8.4.22",
]
